--- a/index.html
+++ b/index.html
@@ -23,7 +23,18 @@
         .navbar {
             height: 20px; /* Mengatur tinggi navbar */
         }
+        .dark .text-custom-dark {
+            color: white;
+        }
+
     </style>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        // Enable dark mode with 'class' strategy
+        tailwind.config = {
+            darkMode: 'class',
+        }
+    </script>
 </head>
 <body>
 
@@ -86,10 +97,10 @@
 	</section>
 	<section class="py-12 bg-base-100" id="layanan-terapi">
     <div class="container mx-auto px-4">
-        <h2 class="text-3xl font-bold text-center mb-8">Layanan Terapi</h2>
+        <h2 class="text-3xl font-bold text-center mb-8">Layanan kami</h2>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8">
             <!-- Layanan 1 -->
-            <div class="card bg-white shadow-lg rounded-lg p-4 text-center" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000">
+            <div class="card bg-white shadow-lg rounded-lg p-4 text-center dark:bg-gray-800" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000">
                 <img src="terapi-kesehatan.jpg" alt="Layanan 1" class="w-24 h-24 mx-auto mb-4 object-cover">
                 <h3 class="text-xl font-semibold mb-2">Terapi Bekam</h3>
                 <p class="text-gray-600">
@@ -102,7 +113,7 @@
                 </p>
             </div>
             <!-- Layanan 2 -->
-            <div class="card bg-white shadow-lg rounded-lg p-4 text-center" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
+            <div class="card bg-white shadow-lg rounded-lg p-4 text-center dark:bg-gray-800" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
                 <img src="terapi-kecantikan.jpg" alt="Layanan 2" class="w-24 h-24 mx-auto mb-4 object-cover">
                 <h3 class="text-xl font-semibold mb-2">Terapi Kecantikan</h3>
                 <p class="text-gray-600">
@@ -118,7 +129,7 @@
                 </p>
             </div>
             <!-- Layanan 3 -->
-            <div class="card bg-white shadow-lg rounded-lg p-4 text-center" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
+            <div class="card bg-white shadow-lg rounded-lg p-4 text-center dark:bg-gray-800" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
                 <img src="terapi-akupuntur.jpg" alt="Layanan 3" class="w-24 h-24 mx-auto mb-4 object-cover">
                 <h3 class="text-xl font-semibold mb-2">Terapi Akupuntur</h3>
                 <p class="text-gray-600">
@@ -134,9 +145,30 @@
                 </p>
             </div>
             <!-- Layanan 4 -->
-            <div class="card bg-white shadow-lg rounded-lg p-4 text-center" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
+            <div class="card bg-white shadow-lg rounded-lg p-4 text-center" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000">
+                <img src="rawat-luka.jpg" alt="Layanan 4" class="w-24 h-24 mx-auto mb-4 object-cover">
+                <h3 class="text-xl font-semibold mb-2">Perawatan Luka</h3>
+                <p class="text-gray-600">
+                    <ul>
+                        <li>Diabetes</li>
+                        <li>Vitamin Booster</li>
+                    </ul>
+                </p>
+            </div>
+            <div class="card bg-base-200 shadow-lg rounded-lg p-4 text-center" data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000">
+                <img src="cek-kesehatan.jpeg" alt="Layanan 4" class="w-24 h-24 mx-auto mb-4 object-cover">
+                <h3 class="text-xl font-semibold mb-2">Cek Kesehatan</h3>
+                <p class="text-gray-600">
+                    <ul>
+                        <li>Asam Urat</li>
+                        <li>Kolesterol</li>
+                        <li>Kadar Gula</li>
+                    </ul>
+                </p>
+            </div>
+            <div class="card bg-base-200 shadow-lg rounded-lg p-4 text-center" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
                 <img src="terapi-lainnya.jpg" alt="Layanan 4" class="w-24 h-24 mx-auto mb-4 object-cover">
-                <h3 class="text-xl font-semibold mb-2">Terapi lainnya</h3>
+                <h3 class="text-xl font-semibold mb-2">Add-on</h3>
                 <p class="text-gray-600">
                     <ul>
                         <li>Collon Cleansing</li>
@@ -161,14 +193,14 @@
             <!-- Visi Section -->
             <div class="bg-base-200 p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow" data-aos="zoom-in-up" data-aos-duration="1000">
                 <h3 class="text-2xl font-semibold mb-4 text-gray-800"><i class="fa-brands fa-dart-lang"></i> Visi</h3>
-                <p class="text-gray-600">
+                <p class="text-gray-600 text-custom-dark">
                     Menjadi pusat terapi kesehatan terpercaya yang mengutamakan kualitas layanan dan kepuasan pelanggan.
                 </p>
             </div>
             <!-- Misi Section -->
             <div class="bg-base-200 p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow" data-aos="zoom-in-up" data-aos-duration="1000">
                 <h3 class="text-2xl font-semibold mb-4 text-gray-800"><i class="fa-solid fa-rocket"></i> Misi</h3>
-                <ul class="list-disc text-gray-600 pl-4 text-left">
+                <ul class="list-disc text-gray-600 pl-4 text-left text-custom-dark">
                     <li>Menyediakan layanan terapi berkualitas dengan pendekatan holistik.</li>
                     <li>Mengutamakan profesionalisme dan etika dalam setiap layanan.</li>
                     <li>Meningkatkan kesadaran masyarakat tentang pentingnya kesehatan.</li>
@@ -191,7 +223,7 @@
             <div class="card-body">
                 <h3 class="text-xl font-semibold">Alin</h3>
                 <p class="text-gray-500">Therapist</p>
-                <p>Halo, saya Alin, terapis kesehatan dan kecantikan alternatif.</p>
+                <p>Halo, saya Alin, terapis kesehatan dan kecantikan alternatif. Dengan pendekatan holistik, saya berkomitmen untuk membantu Anda meraih keseimbangan tubuh dan pikiran serta meningkatkan kepercayaan diri melalui perawatan alami dan menyeluruh.</p>
             </div>
         </div>
         <!-- Team Member 2 -->
@@ -202,7 +234,7 @@
             <div class="card-body">
                 <h3 class="text-xl font-semibold">Asnawi</h3>
                 <p class="text-gray-500">Therapist</p>
-                <p>Saya Asnawi, terapis alternatif profesional yang siap memberikan Solusi Sehat dan Bugar untuk Anda.</p>
+                <p>"Halo, saya Asnawi, terapis alternatif profesional. Saya siap memberikan solusi kesehatan dan kebugaran yang holistik untuk membantu Anda mencapai keseimbangan tubuh dan pikiran."</p>
             </div>
         </div>
         <!-- Team Member 3 -->
@@ -213,7 +245,7 @@
             <div class="card-body">
                 <h3 class="text-xl font-semibold">Asty</h3>
                 <p class="text-gray-500">Therapist</p>
-                <p>Saya Asty, terapis kesehatan dan kecantikan alternatif.</p>
+                <p>"Halo, saya Asty, terapis kesehatan dan kecantikan alternatif. Dengan sentuhan holistik, saya siap membantu Anda meraih kesehatan optimal dan kecantikan alami dari dalam."</p>
             </div>
         </div>
         <!-- Team Member 4 -->
@@ -224,7 +256,7 @@
             <div class="card-body">
                 <h3 class="text-xl font-semibold">Niken</h3>
                 <p class="text-gray-500">Therapist</p>
-                <p>Perkenalkan, saya Niken Kurnia, terapis kesehatan dan kecantikan yang menggabungkan keahlian Akupuntur Cina dan Thibunabawi.</p>
+                <p>"Perkenalkan, saya Niken Kurnia, terapis kesehatan dan kecantikan yang menggabungkan keahlian Akupuntur Cina dan Thibunabawi."</p>
             </div>
         </div>
         <!-- Team Member 5 -->
@@ -235,7 +267,7 @@
             <div class="card-body">
                 <h3 class="text-xl font-semibold">Putriyani</h3>
                 <p class="text-gray-500">Therapist</p>
-                <p class="">Salam sehat! Saya Putriyani, terapis kesehatan alternatif dengan keahlian dalam bekam, reposisi tulang sendi, serta totok wajah.</p>
+                <p class="">"Salam sehat! Saya Putriyani, terapis kesehatan alternatif dengan keahlian dalam bekam, reposisi tulang sendi, serta totok wajah."</p>
             </div>
         </div>
     </div>
@@ -316,7 +348,7 @@
      <div>
             <span class="footer-title">Perusahaan</span>
             <a class="link link-hover" href="#beranda">Beranda</a>
-            <a class="link link-hover" href="#layanan-terapi">Layanan Terapi</a>
+            <a class="link link-hover" href="#layanan-terapi">Layanan kami</a>
             <a class="link link-hover" href="#visi-misi">Visi dan Misi</a>
             <a class="link link-hover" href="#team">Meet our Team</a>
             <a class="link link-hover" href="#daftar-jadi-terapis">Daftar jadi Therapist</a>
@@ -327,7 +359,9 @@
             <a class="link link-hover">Terapi Bekam</a>
             <a class="link link-hover">Terapi Kecantikan</a>
             <a class="link link-hover">Terapi Akupuntur</a>
-            <a class="link link-hover">Terapi lainnya</a>
+            <a class="link link-hover">Add-on</a>
+            <a class="link link-hover">Perawatan Luka</a>
+            <a class="link link-hover">Cek Kesehatan</a>
         </div>
         <div>
             <span class="footer-title">Sosial Media</span>
