--- a/index.html
+++ b/index.html
@@ -342,8 +342,8 @@
          <span class="footer-title">Alamat</span>
          <p class="text-gray-400">Jl. Cemara No.20, Kebalenan,<br> Kec. Banyuwangi, Kabupaten Banyuwangi,<br> Jawa Timur 68417</p>
          <br>
-         <p class="text-gray-400"><b>Telp:</b> 082302030800</p>
-         <p class="text-gray-400"><b>Email:</b> omahsehatbwi@gmail.com</p>
+         <p><b>Telp:</b> 082302030800</p>
+         <p><b>Email:</b> omahsehatbwi@gmail.com</p>
      </div>
      <div>
             <span class="footer-title">Perusahaan</span>
