--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
 <section class="py-12 bg-gradient-to-r from-blue-500 via-teal-400 to-indigo-600" id="visi-misi">
     <div class="container mx-auto px-6 lg:px-16 text-center">
-        <h2 class="text-4xl font-bold mb-8 text-white">Visi dan Misi</h2>
+        <h2 class="text-4xl font-bold mb-8 text-white">Visi & Misi</h2>
         <p class="text-gray-200 mb-12 max-w-2xl mx-auto" data-aos="fade-up" data-aos-duration="1000">
             Kami berkomitmen untuk memberikan pelayanan terbaik dalam mencapai kesejahteraan fisik dan mental bagi setiap pelanggan kami.
         </p>
@@ -349,7 +349,7 @@
             <span class="footer-title">Perusahaan</span>
             <a class="link link-hover" href="#beranda">Beranda</a>
             <a class="link link-hover" href="#layanan-terapi">Layanan kami</a>
-            <a class="link link-hover" href="#visi-misi">Visi dan Misi</a>
+            <a class="link link-hover" href="#visi-misi">Visi & Misi</a>
             <a class="link link-hover" href="#team">Meet our Team</a>
             <a class="link link-hover" href="#daftar-jadi-terapis">Daftar jadi Therapist</a>
             <a class="link link-hover" href="#katalog-produk">Katalog Produk</a>
