ubah text footer

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
          <p><b>Email:</b> omahsehatbwi@gmail.com</p>
      </div>
      <div>
-            <span class="footer-title">Perusahaan</span>
+            <span class="footer-title">Halaman Beranda</span>
             <a class="link link-hover" href="#beranda">Beranda</a>
             <a class="link link-hover" href="#layanan-terapi">Layanan kami</a>
             <a class="link link-hover" href="#visi-misi">Visi & Misi</a>
