update font family

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@1.14.0/dist/full.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
+     <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Muli:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
     <link rel="icon" type="image/x-icon" href="logo.jpg">
     <title>Omah Sehat Banyuwangi</title>
 	<style>
@@ -18,7 +21,7 @@
         }
 		
 		* {
-		font-family: sans-serif;
+            font-family: "Open Sans", sans-serif;
 		}
         .navbar {
             height: 20px; /* Mengatur tinggi navbar */
@@ -223,7 +226,7 @@
             <div class="card-body">
                 <h3 class="text-xl font-semibold">Alin</h3>
                 <p class="text-gray-500">Therapist</p>
-                <p>Halo, saya Alin, terapis kesehatan dan kecantikan alternatif. Dengan pendekatan holistik, saya berkomitmen untuk membantu Anda meraih keseimbangan tubuh dan pikiran serta meningkatkan kepercayaan diri melalui perawatan alami dan menyeluruh.</p>
+                <p> <i>Halo, saya Alin, terapis kesehatan dan kecantikan alternatif. Dengan pendekatan holistik, saya berkomitmen untuk membantu Anda meraih keseimbangan tubuh dan pikiran serta meningkatkan kepercayaan diri melalui perawatan alami dan menyeluruh.</i> </p>
             </div>
         </div>
         <!-- Team Member 2 -->
@@ -234,7 +237,7 @@
             <div class="card-body">
                 <h3 class="text-xl font-semibold">Asnawi</h3>
                 <p class="text-gray-500">Therapist</p>
-                <p>"Halo, saya Asnawi, terapis alternatif profesional. Saya siap memberikan solusi kesehatan dan kebugaran yang holistik untuk membantu Anda mencapai keseimbangan tubuh dan pikiran."</p>
+                <p><i>"Halo, saya Asnawi, terapis alternatif profesional. Saya siap memberikan solusi kesehatan dan kebugaran yang holistik untuk membantu Anda mencapai keseimbangan tubuh dan pikiran."</i></p>
             </div>
         </div>
         <!-- Team Member 3 -->
@@ -245,7 +248,7 @@
             <div class="card-body">
                 <h3 class="text-xl font-semibold">Asty</h3>
                 <p class="text-gray-500">Therapist</p>
-                <p>"Halo, saya Asty, terapis kesehatan dan kecantikan alternatif. Dengan sentuhan holistik, saya siap membantu Anda meraih kesehatan optimal dan kecantikan alami dari dalam."</p>
+                <p><i>"Halo, saya Asty, terapis kesehatan dan kecantikan alternatif. Dengan sentuhan holistik, saya siap membantu Anda meraih kesehatan optimal dan kecantikan alami dari dalam."</i></p>
             </div>
         </div>
         <!-- Team Member 4 -->
@@ -256,7 +259,7 @@
             <div class="card-body">
                 <h3 class="text-xl font-semibold">Niken</h3>
                 <p class="text-gray-500">Therapist</p>
-                <p>"Perkenalkan, saya Niken Kurnia, terapis kesehatan dan kecantikan yang menggabungkan keahlian Akupuntur Cina dan Thibunabawi."</p>
+                <p><i>"Perkenalkan, saya Niken Kurnia, terapis kesehatan dan kecantikan yang menggabungkan keahlian Akupuntur Cina dan Thibunabawi."</i></p>
             </div>
         </div>
         <!-- Team Member 5 -->
@@ -267,7 +270,7 @@
             <div class="card-body">
                 <h3 class="text-xl font-semibold">Putriyani</h3>
                 <p class="text-gray-500">Therapist</p>
-                <p class="">"Salam sehat! Saya Putriyani, terapis kesehatan alternatif dengan keahlian dalam bekam, reposisi tulang sendi, serta totok wajah."</p>
+                <p class=""><i>"Salam sehat! Saya Putriyani, terapis kesehatan alternatif dengan keahlian dalam bekam, reposisi tulang sendi, serta totok wajah."</i></p>
             </div>
         </div>
     </div>
