update button login dan daftar

--- a/index.html
+++ b/index.html
@@ -41,21 +41,14 @@
         }
 
     </style>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-        // Enable dark mode with 'class' strategy
-        tailwind.config = {
-            darkMode: 'class',
-        }
-    </script>
 </head>
 <body>
 
 	 <nav class="navbar bg-base-100 shadow-lg">
         <div class="container mx-auto flex justify-end items-center h-full p-0">
             <ul class="flex space-x-4">
-                <li><a href="login.html" class="btn btn-ghost p-0">Login</a></li>
-                <li><a href="register.html" class="btn btn-ghost p-0">Daftar</a></li>
+                <li><a href="login.html" class="btn btn-ghost p-0 px-2">Login</a></li>
+                <li><a href="register.html" class="btn btn-ghost p-0 px-2">Daftar</a></li>
             </ul>
         </div>
     </nav>
