--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <h2 class="text-3xl font-bold text-center mb-8">Layanan kami</h2>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8">
             <!-- Layanan 1 -->
-            <div class="card bg-base-200 shadow-lg rounded-lg p-4 text-center" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
+            <div class="card bg-base-200 shadow-lg rounded-lg p-4 text-center" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000">
                 <img src="terapi-kesehatan.jpg" alt="Layanan 1" class="w-24 h-24 mx-auto mb-4 object-cover">
                 <h3 class="text-xl font-semibold mb-2">Terapi Bekam</h3>
                 <p class="text-gray-600">
@@ -120,7 +120,7 @@
                 </p>
             </div>
             <!-- Layanan 2 -->
-            <div class="card bg-base-200 shadow-lg rounded-lg p-4 text-center" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
+            <div class="card bg-base-200 shadow-lg rounded-lg p-4 text-center" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
                 <img src="terapi-kecantikan.jpg" alt="Layanan 2" class="w-24 h-24 mx-auto mb-4 object-cover">
                 <h3 class="text-xl font-semibold mb-2">Terapi Kecantikan</h3>
                 <p class="text-gray-600">
@@ -136,7 +136,7 @@
                 </p>
             </div>
             <!-- Layanan 3 -->
-            <div class="card bg-base-200 shadow-lg rounded-lg p-4 text-center" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
+            <div class="card bg-base-200 shadow-lg rounded-lg p-4 text-center" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
                 <img src="terapi-akupuntur.jpg" alt="Layanan 3" class="w-24 h-24 mx-auto mb-4 object-cover">
                 <h3 class="text-xl font-semibold mb-2">Terapi Akupuntur</h3>
                 <p class="text-gray-600">
@@ -162,7 +162,7 @@
                     </ul>
                 </p>
             </div>
-            <div class="card bg-base-200 shadow-lg rounded-lg p-4 text-center" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
+            <div class="card bg-base-200 shadow-lg rounded-lg p-4 text-center" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000">
                 <img src="cek-kesehatan.jpeg" alt="Layanan 4" class="w-24 h-24 mx-auto mb-4 object-cover">
                 <h3 class="text-xl font-semibold mb-2">Cek Kesehatan</h3>
                 <p class="text-gray-600">
@@ -173,7 +173,7 @@
                     </ul>
                 </p>
             </div>
-            <div class="card bg-base-200 shadow-lg rounded-lg p-4 text-center" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
+            <div class="card bg-base-200 shadow-lg rounded-lg p-4 text-center" data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000">
                 <img src="terapi-lainnya.jpg" alt="Layanan 4" class="w-24 h-24 mx-auto mb-4 object-cover">
                 <h3 class="text-xl font-semibold mb-2">Add-on</h3>
                 <p class="text-gray-600">
@@ -323,7 +323,7 @@
                     <div class="bg-white shadow-lg rounded-lg overflow-hidden">
                         <img src="produk-1.jpg" alt="Produk 1" class="w-full h-48 object-cover">
                         <div class="p-4 text-center">
-                            <h3 class="text-lg font-semibold">Trace Mineral Impro</h3>
+                            <h3 class="text-lg font-semibold text-black">Trace Mineral Impro</h3>
                             <p class="text-gray-600">Deskripsi singkat produk.</p>
                         </div>
                     </div>
